# kelvin-public-examples

./: .gitignore  README.md  pyproject.toml
data/bluth-sample/: Animation Agreement.docx  Bluth Banana Cloud - Open Source.docx  Bluth Banana Cloud - source code excerpt.docx  Bluth Banana Cloud Financial Projections.xlsx  CORPORATE RESOLUTION OF BLUTH COMPANY.docx  Cornballer Patent.docx  Corporate By-Laws.docx  Diane Burns Employment Agreement.docx  Employment Agreement - Buster Bluth.docx  Employment Agreement - George Bluth.docx  Employment Agreement - Lucille Bluth.docx  Employment Agreement - Michael Bluth.docx  Lender Commitment Letter.docx  List of Assets.docx  List of Liabilities.docx  Market Report.docx  Personal Property Taxes.docx  SWOT Analysis.docx  Synthetic Data Room.docx  Tax Opinion.docx  Trademark - _There's Always Money in the Banana Stand_.docx  Untitled document.docx  _Bluth Banana Cloud Platform Terms of Service_.docx
examples/: summarize_bluth_data_room.py
notebooks/: summarize_bluth_data_room.ipynb  summarize_edgar.ipynb  summarize_fr.ipynb  summarize_invoice.ipynb
